--- a/rust/APKBUILD
+++ b/rust/APKBUILD
@@ -94,8 +94,8 @@ subpackages="
 	cargo-doc:_cargo_doc:noarch
 	"
 source="
-	https://static.rust-lang.org/dist/rust-$_bootver-x86_64-unknown-linux-musl.tar.xz
-	https://static.rust-lang.org/dist/rustc-$pkgver-src.tar.xz
+	https://static.rust-lang.org/dist/rust-$_bootver-x86_64-unknown-linux-musl.tar.gz
+	https://static.rust-lang.org/dist/rustc-$pkgver-src.tar.gz
 	https://github.com/rust-lang/rust/pull/119582.patch
 	alpine-move-py-scripts-to-share.patch
 	alpine-target.patch
@@ -356,8 +356,8 @@ _mv() {
 }
 
 sha512sums="
-8fb65ea5538c4a0865ac75561bb8df71d3703f1d4ed603f51752844f1bea02a9a52858587f3ee776a5ec27e793762a1b7c9cd845bceedd8a313d7ce2ad476ca1  rust-1.74.1-x86_64-unknown-linux-musl.tar.xz
-7b0f25d91b1b5c317980fc88e059200bd43b56a70b445fbc72fb9b96e09775bfd3a98e9bd9d662af80f0ce3aef527c777ee82777e96ca876f47a972d63da8606  rustc-1.75.0-src.tar.xz
+ad17db8ce58ce877c987d630a26c519a014098a9cb5689b0a00d03e2e73082d3413053555e77cea6490167cff09885291e257d0ca0392bb7746b97fe52ecfea8  rust-1.74.1-x86_64-unknown-linux-musl.tar.gz
+c0fbc7349082bdda5693664f86e2814e3a15272dd1b5028859e9d0d864b4375fae94b7039e14567d25bc9c3c4d8187734a163a2522b75cb1f267f7b9e57c3385  rustc-1.75.0-src.tar.gz
 c8a6fd6035dcf6542e2fb6da5d4c49fb0f44379ebc663d8c793bc3cc2defb4a1f431cdc136797ed824a3a70f445c6127a6357038ef5a5b79b09bbd481d64dce6  119582.patch
 4ecf3fed9495f8813e11e1423e77d57033ca98909709a4a8585cdb8150276c83814609e7ce34aa83b7e463396b62f873b68b16fc31bf8f9132d63bcf8f708926  alpine-move-py-scripts-to-share.patch
 811840cd7fce7c21ed287136716eec101b3ee95f284733f4144f7958f246699879840b5530b1a4e4c01c965cc2525970424aa8e35facb49ad882c73cbf5ffb5c  alpine-target.patch
